--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "format": "npm run prettier -- --write",
         "lint": "eslint --ext .ts,.tsx",
         "lint:fix": "npm run lint -- --fix",
-        "storybook": "start-storybook"
+        "storybook": "start-storybook",
+        "prepare": "husky install"
     },
     "keywords": [],
     "author": "",
@@ -78,16 +79,5 @@
         "redux-logger": "^3.0.6",
         "redux-thunk": "^2.3.0",
         "style-loader": "^1.3.0"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged"
-        }
-    },
-    "lint-staged": {
-        "src/**/*.{ts,tsx}": [
-            "eslint . --fix",
-            "git add"
-        ]
     }
 }
