--- a/package.json
+++ b/package.json
@@ -21,63 +21,62 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@babel/core": "^7.12.10",
-        "@babel/plugin-proposal-class-properties": "^7.12.1",
-        "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-        "@babel/preset-env": "^7.12.11",
-        "@babel/preset-react": "^7.12.10",
-        "@babel/preset-typescript": "^7.12.7",
+        "@babel/core": "^7.23.7",
+        "@babel/plugin-proposal-class-properties": "^7.18.6",
+        "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+        "@babel/preset-env": "^7.23.7",
+        "@babel/preset-react": "^7.23.3",
+        "@babel/preset-typescript": "^7.23.3",
         "@storybook/addon-info": "^5.3.21",
-        "@storybook/react": "^5.3.21",
-        "@typescript-eslint/eslint-plugin": "^3.10.1",
-        "@typescript-eslint/parser": "^3.10.1",
-        "babel-loader": "^8.2.2",
-        "babel-preset-react-app": "^9.1.2",
+        "@storybook/react": "^7.6.7",
+        "@typescript-eslint/eslint-plugin": "^6.18.0",
+        "@typescript-eslint/parser": "^6.18.0",
+        "babel-loader": "^9.1.3",
+        "babel-preset-react-app": "^10.0.1",
         "eslint-loader": "^4.0.2",
-        "eslint-plugin-react": "^7.22.0",
+        "eslint-plugin-react": "^7.33.2",
         "file-loader": "^6.2.0",
-        "html-loader": "^1.3.2",
+        "html-loader": "^4.2.0",
         "html-webpack-externals-plugin": "^3.8.0",
-        "html-webpack-plugin": "^4.5.1",
+        "html-webpack-plugin": "^5.6.0",
         "husky": "^8.0.3",
-        "lint-staged": "^10.5.3",
+        "lint-staged": "^15.2.0",
         "node-sass": "^9.0.0",
-        "sass": "^1.32.2",
-        "sass-loader": "^9.0.3",
-        "svg-url-loader": "^6.0.0",
-        "typescript": "^3.9.7",
-        "webpack": "^4.45.0",
-        "webpack-cli": "^3.3.12",
-        "webpack-dev-server": "^3.11.1"
+        "sass": "^1.69.7",
+        "sass-loader": "^13.3.3",
+        "svg-url-loader": "^8.0.0",
+        "typescript": "^5.3.3",
+        "webpack": "^5.89.0",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^4.15.1"
     },
     "dependencies": {
-        "@babel/plugin-transform-runtime": "^7.12.10",
-        "@babel/runtime": "^7.12.5",
-        "@types/react": "^16.14.2",
-        "@types/react-dom": "^16.9.10",
-        "@types/react-redux": "^7.1.15",
-        "@types/react-router-dom": "^5.1.7",
-        "@types/redux-form": "^8.3.1",
-        "@types/redux-logger": "^3.0.8",
-        "antd": "^4.10.2",
-        "axios": "^0.19.2",
-        "bootstrap": "^4.5.3",
-        "css-loader": "^3.6.0",
-        "eslint": "^7.17.0",
-        "eslint-config-prettier": "^6.15.0",
-        "eslint-plugin-prettier": "^3.3.1",
+        "@babel/plugin-transform-runtime": "^7.23.7",
+        "@babel/runtime": "^7.23.7",
+        "@reduxjs/toolkit": "^2.0.1",
+        "@types/react": "^18.2.47",
+        "@types/react-dom": "^18.2.18",
+        "@types/react-redux": "^7.1.33",
+        "@types/react-router-dom": "^5.3.3",
+        "@types/redux-form": "^8.3.10",
+        "@types/redux-logger": "^3.0.12",
+        "antd": "^5.12.8",
+        "axios": "^1.6.5",
+        "bootstrap": "^5.3.2",
+        "css-loader": "^6.8.1",
+        "eslint": "^8.56.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.1.2",
         "font-awesome": "^4.7.0",
-        "prettier": "^2.2.1",
-        "react": "^16.14.0",
-        "react-dom": "^16.14.0",
-        "react-redux": "^7.2.2",
-        "react-router": "^3.2.0",
-        "react-router-dom": "^4.3.1",
-        "redux": "^4.0.5",
-        "redux-devtools-extension": "^2.13.8",
-        "redux-form": "^8.3.7",
+        "prettier": "^3.1.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-redux": "^9.0.4",
+        "react-router-dom": "^6.21.1",
+        "redux-devtools-extension": "^2.13.9",
+        "redux-form": "^8.3.10",
         "redux-logger": "^3.0.6",
-        "redux-thunk": "^2.3.0",
-        "style-loader": "^1.3.0"
+        "redux-thunk": "^3.1.0",
+        "style-loader": "^3.3.3"
     }
 }
