--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
         "@typescript-eslint/parser": "^6.18.0",
         "babel-loader": "^9.1.3",
         "babel-preset-react-app": "^10.0.1",
-        "eslint-loader": "^4.0.2",
         "eslint-plugin-react": "^7.33.2",
+        "eslint-webpack-plugin": "^4.0.1",
         "file-loader": "^6.2.0",
         "html-loader": "^4.2.0",
         "html-webpack-externals-plugin": "^3.8.0",
